clusters/aks-dev/workloads/bookstack/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: bookstack
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: "/mnt/azure"
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-claim

---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: bookstack
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
