clusters/aks-dev/workloads/bookstack/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: bookstack-gateway-ext
  namespace: bookstack
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: star-test-elemamm-developers-global-io
    hosts:
    - "bookstack.test.elemamm.developers.global.io"
